<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FaceRegistLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.facerecognitionbyusbcamera.BatchRegisterActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        android:text="@string/face_import_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/face_import_dir_select"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_import_img_dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/FLA_dataset_tips"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_select_import_img_dir"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="150dp"
            android:text="@string/select"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/face_import_btn"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbars="vertical" />


</LinearLayout>
